# Hive_Backend

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt  setup_env.py  utils.env
app/: __init__.py  main.py
app/agents/rag_agent/: rag_agent.py  test_rag_agent.py
app/agents/scraper_agent/: web_scraper.py
app/agents/scrapers/scraper_agent/: web_scraper.py
app/agents/scrapper_agent/scraper_agent/: __init__.py
app/agents/search_agent/: search_agent.py
app/api/: routes.py
app/api/routers/: auth.py  postRoutes.py  post_routes.py  posts.py  routes.py  storage.py  userAuthentication.py  user_auth.py
app/core/: Oauth_token.py  config.py  security.py  supabase.py
app/models/: databases.py  post.py  rag.py  schemas.py  scraper.py  scrapper.py
app/rag_pipeline/: __init__.py  verification_pipeline.py
app/scrapers/: web_scraper.py
app/services/: post_service.py  verification_service.py
app/utils/: helpers.py  supabase_client.py
tests/: test_main.py  test_supabase_client.py
