[project]
name = "hive-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Quantum-Codes",email = "87054411+Quantum-Codes@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "supabase (>=2.18.1,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "chromadb (>=1.0.20,<2.0.0)",
    "lxml-html-clean (>=0.4.2,<0.5.0)",
    "newspaper3k (>=0.2.8,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
